public/css/aside.css
.content aside {
  float: right;
  width: 200px;
  padding-left: 1em;
  padding-bottom: 1em;
  font-size: 0.9em;
  color: #a8a8a8;
}

.content aside h1,
.content aside h2,
.content aside h3,
.content aside h4 {
  color: white;
}

.content aside p.break {
  font-size: 2em;
  text-align: center;
  margin-top: -0.9em;
  margin-bottom: 0;
}

.content aside p.break::before {
  content: "❧";
}

.content aside em {
  color: red;
}

